--- a/metadata.yml
+++ b/metadata.yml
@@ -1,9 +1,8 @@
 ---
-title: Your Awesome Book
-subtitle: A Template to Get Your Book Started
+title: Lenguaje Julia
+subtitle: Estadística Descriptiva
 author:
-  - Example author 1
-  - Example author 2
+  - Carlos LESMES
 
 html-license: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
 tex-license: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
